# GeneticNeuralEvolution

./: Blob.c++  Game.c++  README.md
Examples/: CMakeLists.txt  DistrubutedComputing.cpp  Master.cpp  Namespaces.C++  NeuralNetwork.cpp  Node.cpp  SocketClient.C++  SocketServer.C++  testNamespaces.C++
Examples/Libraries/: CMakeLists.txt  DistrubutedComputing.cpp  ModelPartitioner.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  Ops_Parallel.h  ParallelFor.h  Serialization.cpp  System_Info.cpp  System_Info.hpp  ThreadPool.cpp  ThreadPool.hpp
Examples/Linux/: CMakeLists.txt  Master.cpp  Node.cpp  SocketClient.C++  SocketClient.cpp  SocketServer.C++  cmakelists.txt
Examples/Linux/builds/: Master  Node  SocketClient  SocketServer
Examples/Linux/network/: MasterServer.cpp  MasterServer.hpp  NodeClient.cpp  NodeClient.hpp
Examples/Linux/network/net/: Connection.hpp  Logger.hpp  MasterServer.cpp  MasterServer.hpp  Protocol.hpp  Registry.hpp
Examples/Windows/: Node.cpp
Include/: Namespaces.h
